--- a/UR_playground_mainwindow03.ui
+++ b/UR_playground_mainwindow03.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>968</width>
-    <height>816</height>
+    <height>785</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -90,6 +90,9 @@
                   <height>20</height>
                  </size>
                 </property>
+                <property name="toolTip">
+                 <string>Length of tool attached to robot</string>
+                </property>
                 <property name="text">
                  <string>50</string>
                 </property>
@@ -124,6 +127,12 @@
                 <horstretch>0</horstretch>
                 <verstretch>0</verstretch>
                </sizepolicy>
+              </property>
+              <property name="toolTip">
+               <string>Robot Model</string>
+              </property>
+              <property name="whatsThis">
+               <string>The Model of the Robot that will be used. Currently only UR5 available, but any UR Robot should work</string>
               </property>
               <item>
                <property name="text">
@@ -165,6 +174,12 @@
                 <width>100</width>
                 <height>20</height>
                </size>
+              </property>
+              <property name="toolTip">
+               <string>Robot IP Address</string>
+              </property>
+              <property name="whatsThis">
+               <string>THe IP address of the robot. You can find your robots IP by pressing in the upper left corner on the pendant. </string>
               </property>
               <property name="inputMethodHints">
                <set>Qt::ImhDigitsOnly</set>
@@ -240,6 +255,9 @@
           </item>
           <item row="1" column="0" colspan="3">
            <widget class="QPushButton" name="btnApplyRobotSettings">
+            <property name="toolTip">
+             <string>Press to apply Robot settings</string>
+            </property>
             <property name="text">
              <string>Apply Robot Settings</string>
             </property>
@@ -326,6 +344,9 @@
                   <width>0</width>
                   <height>22</height>
                  </size>
+                </property>
+                <property name="toolTip">
+                 <string>SVG File to be loaded </string>
                 </property>
                </widget>
               </item>
@@ -846,7 +867,7 @@
                  <string>Use Opacity (depth)</string>
                 </property>
                 <property name="checked">
-                 <bool>true</bool>
+                 <bool>false</bool>
                 </property>
                </widget>
               </item>
@@ -1099,7 +1120,7 @@
          <enum>QTabWidget::North</enum>
         </property>
         <property name="currentIndex">
-         <number>0</number>
+         <number>1</number>
         </property>
         <property name="usesScrollButtons">
          <bool>true</bool>
@@ -1135,7 +1156,7 @@
                 <string>Show Grid</string>
                </property>
                <property name="checked">
-                <bool>true</bool>
+                <bool>false</bool>
                </property>
               </widget>
              </item>
@@ -1205,53 +1226,79 @@
          <attribute name="title">
           <string>Log</string>
          </attribute>
-         <widget class="QWidget" name="verticalLayoutWidget">
-          <property name="geometry">
-           <rect>
-            <x>0</x>
-            <y>0</y>
-            <width>571</width>
-            <height>271</height>
-           </rect>
-          </property>
-          <layout class="QVBoxLayout" name="verticalLayout">
-           <item>
-            <layout class="QGridLayout" name="gridLayout_8"/>
-           </item>
-           <item>
-            <widget class="QComboBox" name="comboBox_2">
-             <item>
-              <property name="text">
-               <string>info</string>
+         <layout class="QVBoxLayout" name="verticalLayout_5">
+          <item>
+           <layout class="QVBoxLayout" name="verticalLayout">
+            <property name="leftMargin">
+             <number>0</number>
+            </property>
+            <property name="topMargin">
+             <number>0</number>
+            </property>
+            <property name="rightMargin">
+             <number>0</number>
+            </property>
+            <property name="bottomMargin">
+             <number>0</number>
+            </property>
+            <item>
+             <widget class="QComboBox" name="comboBox_2">
+              <property name="enabled">
+               <bool>false</bool>
               </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>debug</string>
+              <property name="editable">
+               <bool>false</bool>
               </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>warning</string>
+              <item>
+               <property name="text">
+                <string>INFO</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>DEBUG</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>WARNING</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>ERROR</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>CRITICAL</string>
+               </property>
+              </item>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPlainTextEdit" name="txtLog">
+              <property name="toolTip">
+               <string>Shows logging messages. Current level set to INFO</string>
               </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>error</string>
+             </widget>
+            </item>
+            <item>
+             <spacer name="verticalSpacer_4">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
               </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>critical</string>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>40</height>
+               </size>
               </property>
-             </item>
-            </widget>
-           </item>
-           <item>
-            <widget class="QTextBrowser" name="textBrowser"/>
-           </item>
-          </layout>
-         </widget>
+             </spacer>
+            </item>
+           </layout>
+          </item>
+         </layout>
         </widget>
        </widget>
       </item>
@@ -1291,7 +1338,6 @@
   <tabstop>horizontalSlider</tabstop>
   <tabstop>comboBox_2</tabstop>
   <tabstop>btnConnect</tabstop>
-  <tabstop>textBrowser</tabstop>
   <tabstop>pushButton_2</tabstop>
  </tabstops>
  <resources/>
